--- a/Makefile.gdc
+++ b/Makefile.gdc
@@ -1,21 +1,26 @@
-LIBS=-L-ldl -L-lstdc++
-COMFLAGS=
-DLINK=$(COMFLAGS) 
+# make install DESTDIR=/home/yamo/devel/cc2/snap/parts/ccutter/install
+
+LIBS=-ldl -lstdc++
+COMFLAGS=-O2 -g
 VERSION=$(shell cat Version)
-DFLAGS=$(COMFLAGS) -I./src -J./src/c64 -J./src/font -O
-CFLAGS=$(COMFLAGS) -O1
-CXXFLAGS=-I./src -O3
-COMPILE.d = $(DC) $(DFLAGS) -c -of$@
-OUTPUT_OPTION=
-DC=dmd
+DFLAGS=$(COMFLAGS) $(LDFLAGS) -I./src -J./src/c64 -J./src/font
+CFLAGS:=$(COMFLAGS) $(CFLAGS)
+CXXFLAGS=$(COMFLAGS) $(CPPFLAGS) -I./src 
+COMPILE.d = $(DC) $(DFLAGS) -c
+DC=gdc
 EXE=
 TARGET=ccutter
 OBJ_EXT=.o
 
 include Makefile.objects.mk
 
-$(TARGET): $(C64OBJS) $(OBJS) $(CXX_OBJS)
-	$(DC) $(DLINK) -of$(TARGET) $(OBJS) $(CXX_OBJS) $(LIBS)
+.PHONY: install release dist clean dclean tar
+
+all: ct2util ccutter
+
+ccutter:$(C64OBJS) $(OBJS) $(CXX_OBJS)
+	$(DC) $(COMFLAGS) -o $@ $(OBJS) $(CXX_OBJS) $(LIBS)
+
 
 .cpp.o : $(CXX_SRCS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -26,27 +31,27 @@ $(TARGET): $(C64OBJS) $(OBJS) $(CXX_OBJS)
 ct: $(C64OBJS) $(CTOBJS)
 
 ct2util: $(C64OBJS) $(UTILOBJS)
-	$(DC) $(DLINK) -of$@ $(UTILOBJS) $(LIBS) 
+	$(DC) $(COMFLAGS) -o $@ $(UTILOBJS)
 
 c64: $(C64OBJS)
 
-all: c64 $(OBJS) $(CXX_OBJS) $(UTILOBJS) ct2util ct $(TARGET)
+install: all
+	strip ccutter$(EXE)
+	strip ct2util$(EXE)
+	cp ccutter$(EXE) $(DESTDIR)
+	cp ct2util$(EXE) $(DESTDIR)
+	mkdir $(DESTDIR)/example_tunes
+	cp -r tunes/* $(DESTDIR)/example_tunes
 
 # release version with additional optimizations
-# release: DFLAGS += -release -boundscheck=off
+release: DFLAGS += -frelease -fno-bounds-check
 release: all
 	strip ccutter$(EXE)
 	strip ct2util$(EXE)
 
-# development release pulled from git master
-devrelease: DFLAGS += -version=DEV
-devrelease: all
-	tar --transform 's,^\.,cheesecutter-devbuild,' -cvf cheesecutter-devbuild-linux-x86.tar.gz $(DIST_FILES)
-
 # tarred release
 dist:	release
 	tar --transform 's,^\.,cheesecutter-$(VERSION),' -cvf cheesecutter-$(VERSION)-linux-x86.tar.gz $(DIST_FILES)
-
 
 clean: 
 	rm -f *.o *~ resid/*.o resid-fp/*.o ccutter ct2util \
@@ -67,7 +72,7 @@ src/ct/base.o: src/c64/player.bin
 src/ui/ui.o: src/ui/help.o
 
 %.o: %.d
-	$(COMPILE.d) $(OUTPUT_OPTION) $<
+	$(COMPILE.d) -o $@ $<
 
 
 
