--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Configure build
       run: meson build
+    - uses: actions/upload-artifact@v2-preview
+      if: failure()
+      with:
+        name: meson-log.txt
+        path: build/meson-logs/meson-log.txt
     - name: Compile
       run: ninja -C build
     - uses: actions/upload-artifact@v2-preview
