--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,6 @@ jobs:
     steps:
     - name: Install LLVM
       run: choco install llvm
-    - env:
-        Path: 'C:/Program Files/LLVM/bin'
     - uses: ilammy/msvc-dev-cmd@v1.0.1
     - uses: actions/setup-python@v1
     - uses: mihails-strasuns/setup-dlang@v0.5.0
@@ -18,6 +16,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Configure build
       run: meson setup build --backend ninja
+      env:
+        Path: '${{ env.Path }};C:/Program Files/LLVM/bin'
     - uses: actions/upload-artifact@v2-preview
       if: failure()
       with:
