--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
     - name: Install LLVM
       run: choco install llvm
     - uses: ilammy/msvc-dev-cmd@v1.0.1
+      with:
+        arch: x86
     - uses: actions/setup-python@v1
     - uses: mihails-strasuns/setup-dlang@v0.5.0
       with:
