--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Install LLVM
       if: matrix.target.os == 'windows-latest'
       run: choco install llvm
+    - name: Install Ninja
+      if: matrix.target.os == 'ubuntu-latest'
+      run: sudo apt-get install ninja-build
     - uses: ilammy/msvc-dev-cmd@v1.0.1
       with:
         arch: x86
