--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: Build
-on: [push]
+on: [push, release]
 jobs:
   build:
     strategy:
@@ -40,9 +40,16 @@ jobs:
     - name: Compile
       run: ninja -C build
     - name: Package
-      run: python ci_package.py
-    - name: Upload
+      run: python ci_package.py CheeseCutter-v2.9-CC-${{ matrix.target.name }}
+    - name: Upload CI artifact
       uses: actions/upload-artifact@v2-preview
+      if: github.event_name != 'release'
       with:
-        name: CheeseCutter-v2.9-CC-${{ matrix.target.name }}
+        name: CheeseCutter-v2.9-CC-${{ matrix.target.name }}-DEV
         path: CheeseCutter
+    - uses: JasonEtco/upload-to-release@v0.1.1
+      if: github.event_name == 'release'
+      with:
+        args: CheeseCutter-v2.9-CC-${{ matrix.target.name }}.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
