--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         name: CheeseCutter-v2.9-CC-${{ matrix.target.name }}-DEV
         path: CheeseCutter
-    - uses: Shopify/upload-to-release@v1.0.0
+    - uses: Shopify/upload-to-release@1.0.0
       if: github.event_name == 'release'
       with:
         name: CheeseCutter-v2.9-CC-${{ matrix.target.name }}.zip
