--- a/src/resid-fp/siddefs-fp.h.in
+++ b/src/resid-fp/siddefs-fp.h.in
@@ -21,10 +21,10 @@
 #define SIDDEFS_FP_H
 
 // Compilation configuration.
-#define RESID_BRANCH_HINTS 1
+#define RESID_BRANCH_HINTS @RESID_BRANCH_HINTS@
 
 // Compiler specifics.
-#define HAVE_BUILTIN_EXPECT 0
+#define HAVE_BUILTIN_EXPECT @HAVE_BUILTIN_EXPECT@
 
 #ifndef M_PI
 #  define M_PI    3.14159265358979323846
@@ -46,17 +46,8 @@ typedef enum { MOS6581=1, MOS8580 } ChipModel;
 typedef enum { DECIMATE=1, RESAMPLE } SamplingMethod;
 }
 
-extern "C"
-{
-#ifndef __VERSION_CC__
-extern const char* residfp_version_string;
-#else
-const char* residfp_version_string = "2.0.1";
-#endif
-}
-
 // Inlining on/off.
-#define RESID_INLINING 1
-#define RESID_INLINE inline
+#define RESID_INLINING @RESID_INLINING@
+#define RESID_INLINE @RESID_INLINE@
 
 #endif // SIDDEFS_FP_H
